POWR-961 Tweak search config

--- a/composer.json
+++ b/composer.json
@@ -80,6 +80,7 @@
         "drupal/redirect": "^1.1",
         "drupal/remove_http_headers": "^1.0@alpha",
         "drupal/restui": "^1.0",
+        "drupal/search_api_autocomplete": "^1.2",
         "drupal/search_api_page": "^1.0",
         "drupal/search_api_solr": "1.x-dev",
         "drupal/seckit": "^1.1",
