--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -21,6 +21,7 @@ dependencies:
     - field.field.group.program.field_menu_link
     - field.field.group.program.field_parent_group
     - field.field.group.program.field_phone
+    - field.field.group.program.field_search_keywords
     - field.field.group.program.field_shortname_or_acronym
     - field.field.group.program.field_summary
     - field.field.group.program.field_topics
@@ -206,6 +207,14 @@ content:
       country: US
     third_party_settings: {  }
     type: telephone_cleave
+    region: content
+  field_search_keywords:
+    weight: 23
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_shortname_or_acronym:
     weight: 1
