--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.city_service.field_popular
     - field.field.node.city_service.field_related_content
     - field.field.node.city_service.field_reviewer
+    - field.field.node.city_service.field_search_keywords
     - field.field.node.city_service.field_service_mode
     - field.field.node.city_service.field_summary
     - field.field.node.city_service.field_time_to_complete
@@ -82,6 +83,17 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
+  field_search_keywords:
+    weight: 26
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings:
+      maxlength:
+        maxlength_js: 255
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+    type: string_textfield
     region: content
   field_service_mode:
     type: paragraphs
