--- a/web/sites/default/config/core.entity_form_display.node.development_permit.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.development_permit.default.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.node.development_permit.field_popular
     - field.field.node.development_permit.field_related_content
     - field.field.node.development_permit.field_reviewer
+    - field.field.node.development_permit.field_search_keywords
     - field.field.node.development_permit.field_service_location
     - field.field.node.development_permit.field_summary
     - field.field.node.development_permit.field_topics
@@ -137,6 +138,14 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
+  field_search_keywords:
+    weight: 26
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_service_location:
     weight: 6
