--- a/web/sites/default/config/core.entity_form_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.event.default.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.node.event.field_legacy_path
     - field.field.node.event.field_related_content
     - field.field.node.event.field_reviewer
+    - field.field.node.event.field_search_keywords
     - field.field.node.event.field_start_date
     - field.field.node.event.field_start_time
     - field.field.node.event.field_summary
@@ -194,6 +195,14 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
+  field_search_keywords:
+    weight: 26
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_start_date:
     weight: 7
