--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.node.event.field_legacy_path
     - field.field.node.event.field_related_content
     - field.field.node.event.field_reviewer
+    - field.field.node.event.field_search_keywords
     - field.field.node.event.field_start_date
     - field.field.node.event.field_start_time
     - field.field.node.event.field_summary
@@ -248,6 +249,14 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
+  field_search_keywords:
+    weight: 6
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_start_date:
     weight: 0
     label: hidden
