--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.news.field_published_on
     - field.field.node.news.field_related_content
     - field.field.node.news.field_reviewer
+    - field.field.node.news.field_search_keywords
     - field.field.node.news.field_summary
     - field.field.node.news.field_topics
     - node.type.news
@@ -73,6 +74,14 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
+    region: content
+  field_search_keywords:
+    weight: 3
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_summary:
     weight: 1
