--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.page.field_popular
     - field.field.node.page.field_related_content
     - field.field.node.page.field_reviewer
+    - field.field.node.page.field_search_keywords
     - field.field.node.page.field_summary
     - field.field.node.page.field_topics
     - node.type.page
@@ -74,6 +75,14 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
+  field_search_keywords:
+    weight: 3
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
 hidden:
   content_moderation_control: true
