--- a/web/sites/default/config/search_api.server.searchstax.yml
+++ b/web/sites/default/config/search_api.server.searchstax.yml
@@ -20,10 +20,13 @@ backend_config:
     index_timeout: 5
     optimize_timeout: 10
     commit_within: 1000
-    username: null
-    password: null
+    username: kevin.wang
+    password: Lijcar@97229
     solr_version: ''
     http_method: AUTO
+  log_query: 1
+  debug_query: 1
+  log_response: 1
   retrieve_data: false
   highlight_data: false
   excerpt: false
