--- a/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
+++ b/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
@@ -13,6 +13,7 @@ index: full_index
 limit: 25
 searched_fields:
   description: description
+  field_search_keywords: field_search_keywords
   label: label
   label_1: label_1
   name: name
