--- a/web/sites/default/config/user.role.anonymous.yml
+++ b/web/sites/default/config/user.role.anonymous.yml
@@ -10,6 +10,8 @@ weight: 0
 is_admin: false
 permissions:
   - 'access content'
+  - 'use search_api_autocomplete for search_portland_gov'
+  - 'use search_api_autocomplete for services_fullindex'
   - 'view field_body'
   - 'view field_popular'
   - 'view field_shortname_or_acronym'
