--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -23,6 +23,7 @@ dependencies:
     - field.field.group.bureau_office.field_official_organization_name
     - field.field.group.bureau_office.field_parent_group
     - field.field.group.bureau_office.field_phone
+    - field.field.group.bureau_office.field_search_keywords
     - field.field.group.bureau_office.field_shortname_or_acronym
     - field.field.group.bureau_office.field_summary
     - field.field.group.bureau_office.field_topics
@@ -227,6 +228,14 @@ content:
       country: US
     third_party_settings: {  }
     type: telephone_cleave
+    region: content
+  field_search_keywords:
+    weight: 33
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_shortname_or_acronym:
     weight: 2
