--- a/web/sites/default/config/core.entity_view_display.node.development_permit.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.default.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.node.development_permit.field_popular
     - field.field.node.development_permit.field_related_content
     - field.field.node.development_permit.field_reviewer
+    - field.field.node.development_permit.field_search_keywords
     - field.field.node.development_permit.field_service_location
     - field.field.node.development_permit.field_summary
     - field.field.node.development_permit.field_topics
@@ -130,6 +131,14 @@ content:
     third_party_settings: {  }
     type: text_default
     region: secondary
+  field_search_keywords:
+    weight: 7
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_service_location:
     weight: 6
     label: hidden
