--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -138,6 +138,7 @@ module:
   schemata: 0
   schemata_json_schema: 0
   search_api: 0
+  search_api_autocomplete: 0
   search_api_db: 0
   search_api_page: 0
   search_api_solr: 0
