--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -189,3 +189,6 @@ draggableviews: 1.2.0
 bootstrap_datepicker: 1.0.0-beta2
 portland_views_helper: 0.1.0
 bootstrap_datepicker_exposed_filter: 1.x
+search_api_logger: 1.3.0
+search_api_spellcheck: 0.0.0
+search_api_autocomplete: 1.2.0
