--- a/web/sites/default/config/user.role.sitewide_editor.yml
+++ b/web/sites/default/config/user.role.sitewide_editor.yml
@@ -20,6 +20,7 @@ permissions:
   - 'create alert content'
   - 'create field_popular'
   - 'create field_shortname_or_acronym'
+  - 'create field_search_keywords'
   - 'edit any alert content'
   - 'edit any audio_file media'
   - 'edit any building content'
@@ -53,6 +54,8 @@ permissions:
   - 'edit own page content'
   - 'edit own service_location content'
   - 'edit own top_search content'
+  - 'edit field_search_keywords'
+  - 'edit own field_search_keywords'
   - 'edit terms in audience'
   - 'edit terms in community_actions'
   - 'edit terms in topics'
@@ -86,10 +89,12 @@ permissions:
   - 'view event revisions'
   - 'view field_menu_link'
   - 'view field_popular'
+  - 'view field_search_keywords'
   - 'view guide revisions'
   - 'view information revisions'
   - 'view news revisions'
   - 'view notification revisions'
   - 'view own field_menu_link'
   - 'view own field_popular'
+  - 'view own field_search_keywords'
   - 'view service_location revisions'
