POWR-961 Disable autocomplete on services page

--- a/web/sites/default/config/search_api_autocomplete.search.services_fullindex.yml
+++ b/web/sites/default/config/search_api_autocomplete.search.services_fullindex.yml
@@ -1,6 +1,6 @@
 uuid: ac6343a0-c206-4bd7-b2a0-ae5beaceae01
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - search_api.index.full_index
