--- a/composer.json
+++ b/composer.json
@@ -174,7 +174,8 @@
                 "POWR-833 - Patch Group module to remove term node and make verbiage more user friendly": "patches/powr-833-group.patch"
             },
             "drupal/groupmedia": {
-                "POWR-833 - Patch Groupmedia module to make the verbiage consistent with Group/gnode": "patches/powr-833-groupmedia.patch"
+                "POWR-833 - Patch Groupmedia module to make the verbiage consistent with Group/gnode": "patches/powr-833-groupmedia.patch",
+                "POWR-974 - Create group media page to use media type descriptions": "patches/powr-974-groupmedia.patch"
             },
             "drupal/clamav": {
                 "2915237 - allowUncheckedFiles() not working as expected": "https://www.drupal.org/files/issues/2915237-2.patch"
