POWR-961 Remove user credentials

--- a/web/sites/default/config/search_api.server.searchstax.yml
+++ b/web/sites/default/config/search_api.server.searchstax.yml
@@ -20,8 +20,8 @@ backend_config:
     index_timeout: 5
     optimize_timeout: 10
     commit_within: 1000
-    username: kevin.wang
-    password: Lijcar@97229
+    username: null
+    password: null
     solr_version: ''
     http_method: AUTO
   log_query: 1
