POWR-978 new date field, project type, project status

--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -4,22 +4,26 @@ status: true
 dependencies:
   config:
     - field.field.group.project.field_audience
-    - field.field.group.project.field_date_time_range
     - field.field.group.project.field_enable_documents_menu_item
     - field.field.group.project.field_enable_events_menu_item
     - field.field.group.project.field_enable_guides_and_informat
     - field.field.group.project.field_enable_news_and_notices_me
     - field.field.group.project.field_enable_projects_menu_item
+    - field.field.group.project.field_end_date
     - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
     - field.field.group.project.field_parent_group
+    - field.field.group.project.field_project_status
+    - field.field.group.project.field_project_type
     - field.field.group.project.field_shortname_or_acronym
+    - field.field.group.project.field_start_date
     - field.field.group.project.field_summary
     - field.field.group.project.field_topics
     - group.type.project
   module:
-    - datetime_range
+    - datetime
     - ds
+    - field_group
 third_party_settings:
   ds:
     layout:
@@ -31,33 +35,52 @@ third_party_settings:
     regions:
       content:
         - field_featured_media
-        - field_date_time_range
+        - group_start_to_end_date
         - field_summary
         - group_site_menu_entity_view_1
+        - field_start_date
+        - field_end_date
+  field_group:
+    group_start_to_end_date:
+      children:
+        - field_start_date
+        - field_end_date
+      parent_name: ''
+      weight: 1
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: 'project-dates h4'
+        element: div
+        show_label: false
+        label_element: h3
+        attributes: ''
+        effect: none
+        speed: fast
+      label: 'Start to end date'
+      region: content
 id: group.project.default
 targetEntityType: group
 bundle: project
 mode: default
 content:
-  field_date_time_range:
-    type: daterange_default
-    weight: 1
+  field_end_date:
+    type: datetime_default
+    weight: 20
     region: content
-    label: inline
+    label: hidden
     settings:
       timezone_override: ''
       format_type: month_day_year
-      separator: ' to '
     third_party_settings:
       ds:
         ft:
           id: expert
           settings:
-            lb: ' '
-            prefix: ''
-            lbw: true
-            lbw-el: h2
-            lbw-cl: sr-only
+            lb: ''
+            prefix: through
+            lbw-el: ''
+            lbw-cl: ''
             lbw-at: ''
             ow-el: ''
             ow-cl: ''
@@ -66,10 +89,11 @@ content:
             fis-cl: ''
             fis-at: ''
             fi: true
-            fi-el: p
-            fi-cl: small
+            fi-el: span
+            fi-cl: 'project-end-date pl-1'
             fi-at: ''
             suffix: ''
+            lbw: false
             lb-col: false
             ow: false
             ow-def-at: false
@@ -92,6 +116,43 @@ content:
             lb-col: false
             classes: {  }
     type: entity_reference_entity_view
+    region: content
+  field_start_date:
+    weight: 19
+    label: hidden
+    settings:
+      timezone_override: ''
+      format_type: month_day_year
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: '<i class="fas fa-calendar"></i>'
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: span
+            fi-cl: 'project--start-date pl-2'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
+    type: datetime_default
     region: content
   field_summary:
     weight: 2
@@ -145,6 +206,8 @@ hidden:
   field_enable_projects_menu_item: true
   field_legacy_path: true
   field_parent_group: true
+  field_project_status: true
+  field_project_type: true
   field_shortname_or_acronym: true
   field_topics: true
   label: true
