--- a/web/sites/default/config/core.entity_view_display.group.project.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.search_result.yml
@@ -1,28 +1,83 @@
-uuid: 2626f3ff-04f1-487f-a042-e64bb67f2b41
+uuid: 98b61207-5118-4793-958b-ab605c6fd871
 langcode: en
 status: true
 dependencies:
   config:
     - core.entity_view_mode.group.search_result
     - field.field.group.project.field_audience
-    - field.field.group.project.field_date_time_range
+    - field.field.group.project.field_enable_documents_menu_item
+    - field.field.group.project.field_enable_events_menu_item
+    - field.field.group.project.field_enable_guides_and_informat
+    - field.field.group.project.field_enable_news_and_notices_me
+    - field.field.group.project.field_enable_projects_menu_item
+    - field.field.group.project.field_end_date
+    - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
     - field.field.group.project.field_parent_group
+    - field.field.group.project.field_project_status
+    - field.field.group.project.field_project_type
     - field.field.group.project.field_shortname_or_acronym
+    - field.field.group.project.field_start_date
     - field.field.group.project.field_summary
     - field.field.group.project.field_topics
     - group.type.project
   module:
+    - datetime
     - ds
 id: group.project.search_result
 targetEntityType: group
 bundle: project
 mode: search_result
 content:
-  field_summary:
-    type: string
-    weight: 2
+  field_end_date:
+    type: datetime_default
+    weight: 20
     region: content
+    label: hidden
+    settings:
+      timezone_override: ''
+      format_type: month_day_year
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_project_type:
+    type: entity_reference_label
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_start_date:
+    weight: 19
+    label: hidden
+    settings:
+      timezone_override: ''
+      format_type: month_day_year
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: datetime_default
+    region: content
+  field_summary:
+    weight: 3
     label: hidden
     settings:
       link_to_entity: false
@@ -44,7 +99,7 @@ content:
             fis-at: ''
             fi: true
             fi-el: p
-            fi-cl: ''
+            fi-cl: lead
             fi-at: ''
             suffix: ''
             lbw: false
@@ -55,49 +110,37 @@ content:
             fis: false
             fis-def-at: false
             fi-def-at: false
+    type: string
+    region: content
   label:
-    label: hidden
     type: string
     weight: 1
     region: content
+    label: hidden
     settings:
       link_to_entity: true
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi: true
-            fi-el: h3
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi-def-at: false
+            classes: {  }
 hidden:
   changed: true
   created: true
   field_audience: true
-  field_date_time_range: true
+  field_enable_documents_menu_item: true
+  field_enable_events_menu_item: true
+  field_enable_guides_and_informat: true
+  field_enable_news_and_notices_me: true
+  field_enable_projects_menu_item: true
+  field_featured_media: true
   field_legacy_path: true
   field_parent_group: true
+  field_project_status: true
   field_shortname_or_acronym: true
   field_topics: true
+  group_site_menu_entity_view_1: true
   uid: true
