--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -5,22 +5,25 @@ dependencies:
   config:
     - entity_browser.browser.image_browser_embed
     - field.field.group.project.field_audience
-    - field.field.group.project.field_date_time_range
     - field.field.group.project.field_enable_documents_menu_item
     - field.field.group.project.field_enable_events_menu_item
     - field.field.group.project.field_enable_guides_and_informat
     - field.field.group.project.field_enable_news_and_notices_me
     - field.field.group.project.field_enable_projects_menu_item
+    - field.field.group.project.field_end_date
     - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
     - field.field.group.project.field_parent_group
+    - field.field.group.project.field_project_status
+    - field.field.group.project.field_project_type
     - field.field.group.project.field_shortname_or_acronym
+    - field.field.group.project.field_start_date
     - field.field.group.project.field_summary
     - field.field.group.project.field_topics
     - group.type.project
   module:
+    - bootstrap_datepicker
     - chosen_field
-    - datetime_range
     - entity_browser
     - field_group
     - maxlength
@@ -34,7 +37,7 @@ third_party_settings:
         - field_enable_documents_menu_item
         - field_enable_projects_menu_item
       parent_name: ''
-      weight: 8
+      weight: 11
       format_type: fieldset
       format_settings:
         id: ''
@@ -49,16 +52,10 @@ bundle: project
 mode: default
 content:
   field_audience:
-    weight: 4
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
-    region: content
-  field_date_time_range:
-    weight: 6
-    settings: {  }
-    third_party_settings: {  }
-    type: daterange_default
     region: content
   field_enable_documents_menu_item:
     weight: 14
@@ -95,9 +92,67 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_end_date:
+    weight: 8
+    settings:
+      title: ''
+      format: mm/dd/yyyy
+      language: en
+      show_week_days: '1'
+      today_btn: 'TRUE'
+      clear_btn: '1'
+      autoclose: '1'
+      week_start: '0'
+      assume_nearby_year: '1'
+      container: body
+      dates_disabled: ''
+      days_of_week_highlighted:
+        2: '2'
+        3: '3'
+        4: '4'
+        5: '5'
+        6: '6'
+        1: 0
+        7: 0
+      disable_touch_keyboard: '1'
+      end_date_selection: date
+      end_date: ''
+      end_date_timedelta: ''
+      force_parse: '1'
+      keyboard_navigation: '1'
+      max_view_mode: '4'
+      min_view_mode: '0'
+      orientation: auto
+      show_on_focus: '1'
+      start_date_selection: date
+      start_date: ''
+      start_date_timedelta: ''
+      start_view: '0'
+      update_view_date: '1'
+      z_index_offset: '10'
+      calendar_weeks: 0
+      toggle_active: false
+      days_of_week_disabled:
+        1: 0
+        2: 0
+        3: 0
+        4: 0
+        5: 0
+        6: 0
+        7: 0
+      enable_on_readonly: 0
+      immediate_updates: 0
+      keep_empty_values: 0
+      multidate: false
+      multidate_separator: ','
+      rtl: 0
+      today_highlight: 0
+    third_party_settings: {  }
+    type: bootstrap_date_widget
+    region: content
   field_featured_media:
     type: entity_browser_entity_reference
-    weight: 2
+    weight: 3
     settings:
       entity_browser: image_browser_embed
       field_widget_display: rendered_entity
@@ -111,7 +166,7 @@ content:
     region: content
     third_party_settings: {  }
   field_legacy_path:
-    weight: 9
+    weight: 12
     settings:
       size: 60
       placeholder: ''
@@ -119,21 +174,91 @@ content:
     type: string_textfield
     region: content
   field_parent_group:
-    weight: 3
+    weight: 4
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
+  field_project_status:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
+  field_project_type:
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_shortname_or_acronym:
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_summary:
+  field_start_date:
     weight: 7
+    settings:
+      title: ''
+      format: mm/dd/yyyy
+      language: en
+      show_week_days: '1'
+      today_btn: 'TRUE'
+      clear_btn: '1'
+      autoclose: '1'
+      week_start: '0'
+      assume_nearby_year: '1'
+      container: body
+      dates_disabled: ''
+      days_of_week_highlighted:
+        2: '2'
+        3: '3'
+        4: '4'
+        5: '5'
+        6: '6'
+        1: 0
+        7: 0
+      disable_touch_keyboard: '1'
+      end_date_selection: date
+      end_date: ''
+      end_date_timedelta: ''
+      force_parse: '1'
+      keyboard_navigation: '1'
+      max_view_mode: '4'
+      min_view_mode: '0'
+      orientation: 'bottom auto'
+      show_on_focus: '1'
+      start_date_selection: date
+      start_date: ''
+      start_date_timedelta: ''
+      start_view: '0'
+      update_view_date: '1'
+      z_index_offset: '10'
+      calendar_weeks: 0
+      toggle_active: false
+      days_of_week_disabled:
+        1: 0
+        2: 0
+        3: 0
+        4: 0
+        5: 0
+        6: 0
+        7: 0
+      enable_on_readonly: 0
+      immediate_updates: 0
+      keep_empty_values: 0
+      multidate: false
+      multidate_separator: ','
+      rtl: 0
+      today_highlight: 0
+    third_party_settings: {  }
+    type: bootstrap_date_widget
+    region: content
+  field_summary:
+    weight: 9
     settings:
       rows: 2
       placeholder: ''
@@ -146,7 +271,7 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 5
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
