--- a/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
@@ -1,32 +1,143 @@
-uuid: c4894ade-dd43-4c41-b748-082389cc9ace
+uuid: 62f6bbf1-1017-424a-9fe3-4e35e04ea70a
 langcode: en
 status: true
 dependencies:
   config:
     - core.entity_view_mode.group.teaser
     - field.field.group.project.field_audience
-    - field.field.group.project.field_date_time_range
     - field.field.group.project.field_enable_documents_menu_item
     - field.field.group.project.field_enable_events_menu_item
     - field.field.group.project.field_enable_guides_and_informat
     - field.field.group.project.field_enable_news_and_notices_me
     - field.field.group.project.field_enable_projects_menu_item
+    - field.field.group.project.field_end_date
     - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
     - field.field.group.project.field_parent_group
     - field.field.group.project.field_shortname_or_acronym
+    - field.field.group.project.field_start_date
     - field.field.group.project.field_summary
     - field.field.group.project.field_topics
     - group.type.project
   module:
+    - datetime
     - ds
+    - field_group
+third_party_settings:
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - label
+        - group_start_to_end_date
+        - field_summary
+        - field_start_date
+        - field_end_date
+  field_group:
+    group_start_to_end_date:
+      children:
+        - field_start_date
+        - field_end_date
+      parent_name: ''
+      weight: 1
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: 'project-dates h4'
+        element: div
+        show_label: false
+        label_element: h3
+        attributes: ''
+        effect: none
+        speed: fast
+      label: 'Start to end date'
+      region: content
 id: group.project.teaser
 targetEntityType: group
 bundle: project
 mode: teaser
 content:
+  field_end_date:
+    type: datetime_default
+    weight: 20
+    region: content
+    label: hidden
+    settings:
+      timezone_override: ''
+      format_type: month_day_year
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: through
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: span
+            fi-cl: 'project-end-date pl-1'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
+  field_start_date:
+    weight: 19
+    label: hidden
+    settings:
+      timezone_override: ''
+      format_type: month_day_year
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: '<i class="fas fa-calendar"></i>'
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: span
+            fi-cl: 'project--start-date pl-2'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
+    type: datetime_default
+    region: content
   field_summary:
-    weight: 0
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -61,11 +172,46 @@ content:
             fi-def-at: false
     type: string
     region: content
+  label:
+    type: string
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: true
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: h3
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
 hidden:
   changed: true
   created: true
   field_audience: true
-  field_date_time_range: true
   field_enable_documents_menu_item: true
   field_enable_events_menu_item: true
   field_enable_guides_and_informat: true
@@ -77,5 +223,4 @@ hidden:
   field_shortname_or_acronym: true
   field_topics: true
   group_site_menu_entity_view_1: true
-  label: true
   uid: true
