--- a/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
@@ -220,6 +220,8 @@ hidden:
   field_featured_media: true
   field_legacy_path: true
   field_parent_group: true
+  field_project_status: true
+  field_project_type: true
   field_shortname_or_acronym: true
   field_topics: true
   group_site_menu_entity_view_1: true
