--- a/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
@@ -64,6 +64,7 @@ hidden:
   field_menu_link: true
   field_official_title: true
   field_phone: true
+  field_search_keywords: true
   field_shortname_or_acronym: true
   group_site_menu_entity_view_1: true
   label: true
