--- a/web/sites/default/config/core.entity_view_display.group.program.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.teaser.yml
@@ -108,6 +108,7 @@ hidden:
   field_menu_link: true
   field_parent_group: true
   field_phone: true
+  field_search_keywords: true
   field_shortname_or_acronym: true
   field_topics: true
   group_site_menu_entity_view_1: true
