--- a/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
@@ -94,6 +94,7 @@ hidden:
   field_featured_media: true
   field_legacy_path: true
   field_parent_group: true
+  field_search_keywords: true
   field_shortname_or_acronym: true
   field_topics: true
   group_site_menu_entity_view_1: true
