--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     },
     "require": {
         "acquia/lightning": "^3.2",
+        "drupal/core": "8.6.16",
         "bower-asset/bootstrap-datepicker": "^1.8",
         "bower-asset/cropper": "^2.3",
         "composer/installers": "^1.2",
