--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -104,6 +104,10 @@ module:
   metatag: 0
   metatag_open_graph: 0
   metatag_twitter_cards: 0
+  migrate: 0
+  migrate_plus: 0
+  migrate_source_csv: 0
+  migrate_tools: 0
   moderation_dashboard: 0
   node: 0
   openapi: 0
@@ -124,6 +128,7 @@ module:
   portland: 0
   portland_legacy_redirects: 0
   portland_media_embed_helper: 0
+  portland_migrations: 0
   portland_revision_helper: 0
   portland_views_helper: 0
   quickedit: 0
