POWR-978 update project displays and templates.

--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -68,7 +68,7 @@ content:
     type: datetime_default
     weight: 20
     region: content
-    label: hidden
+    label: inline
     settings:
       timezone_override: ''
       format_type: month_day_year
@@ -77,8 +77,8 @@ content:
         ft:
           id: expert
           settings:
-            lb: ''
-            prefix: through
+            lb: through
+            prefix: ''
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
@@ -88,9 +88,8 @@ content:
             fis-el: ''
             fis-cl: ''
             fis-at: ''
-            fi: true
-            fi-el: span
-            fi-cl: 'project-end-date pl-1'
+            fi-el: ''
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
@@ -100,6 +99,7 @@ content:
             ow-def-cl: false
             fis: false
             fis-def-at: false
+            fi: false
             fi-def-at: false
   field_featured_media:
     weight: 0
@@ -119,7 +119,7 @@ content:
     region: content
   field_start_date:
     weight: 19
-    label: hidden
+    label: inline
     settings:
       timezone_override: ''
       format_type: month_day_year
@@ -139,9 +139,8 @@ content:
             fis-el: ''
             fis-cl: ''
             fis-at: ''
-            fi: true
-            fi-el: span
-            fi-cl: 'project--start-date pl-2'
+            fi-el: ''
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
@@ -151,6 +150,7 @@ content:
             ow-def-cl: false
             fis: false
             fis-def-at: false
+            fi: false
             fi-def-at: false
     type: datetime_default
     region: content
