--- a/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.teaser.yml
@@ -1,4 +1,4 @@
-uuid: 62f6bbf1-1017-424a-9fe3-4e35e04ea70a
+uuid: 284b24d6-6f3d-441a-9bd8-a50783cc5b9d
 langcode: en
 status: true
 dependencies:
@@ -14,6 +14,8 @@ dependencies:
     - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
     - field.field.group.project.field_parent_group
+    - field.field.group.project.field_project_status
+    - field.field.group.project.field_project_type
     - field.field.group.project.field_shortname_or_acronym
     - field.field.group.project.field_start_date
     - field.field.group.project.field_summary
@@ -22,41 +24,6 @@ dependencies:
   module:
     - datetime
     - ds
-    - field_group
-third_party_settings:
-  ds:
-    layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
-      disable_css: false
-      entity_classes: all_classes
-      settings: {  }
-    regions:
-      content:
-        - label
-        - group_start_to_end_date
-        - field_summary
-        - field_start_date
-        - field_end_date
-  field_group:
-    group_start_to_end_date:
-      children:
-        - field_start_date
-        - field_end_date
-      parent_name: ''
-      weight: 1
-      format_type: html_element
-      format_settings:
-        id: ''
-        classes: 'project-dates h4'
-        element: div
-        show_label: false
-        label_element: h3
-        attributes: ''
-        effect: none
-        speed: fast
-      label: 'Start to end date'
-      region: content
 id: group.project.teaser
 targetEntityType: group
 bundle: project
@@ -64,7 +31,7 @@ mode: teaser
 content:
   field_end_date:
     type: datetime_default
-    weight: 20
+    weight: 3
     region: content
     label: hidden
     settings:
@@ -73,34 +40,13 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: through
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi: true
-            fi-el: span
-            fi-cl: 'project-end-date pl-1'
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi-def-at: false
+            classes: {  }
   field_start_date:
-    weight: 19
+    weight: 2
     label: hidden
     settings:
       timezone_override: ''
@@ -108,36 +54,15 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: '<i class="fas fa-calendar"></i>'
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi: true
-            fi-el: span
-            fi-cl: 'project--start-date pl-2'
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi-def-at: false
+            classes: {  }
     type: datetime_default
     region: content
   field_summary:
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -182,32 +107,11 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi: true
-            fi-el: h3
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi-def-at: false
+            classes: {  }
 hidden:
   changed: true
   created: true
