--- a/web/sites/default/config/field.field.group.project.field_start_date.yml
+++ b/web/sites/default/config/field.field.group.project.field_start_date.yml
@@ -17,7 +17,7 @@ field_name: field_start_date
 entity_type: group
 bundle: project
 label: 'Start date'
-description: 'Enter the exacted or estimated start date for this project.'
+description: 'Enter the exacted or estimated start date for this project in the format of mm/dd/yyyy. '
 required: false
 translatable: false
 default_value: {  }
