--- a/web/sites/default/config/pathauto.pattern.group_offices.yml
+++ b/web/sites/default/config/pathauto.pattern.group_offices.yml
@@ -1,26 +1,24 @@
-uuid: 144a5bbe-f912-42d3-97ba-008be34024d6
+uuid: 4b9cc068-8f7f-4d00-9cb9-896de74c5b37
 langcode: en
 status: true
 dependencies:
   module:
     - ctools
     - group
-id: group_title
-label: 'Group title'
+id: group_offices
+label: 'Group: offices'
 type: 'canonical_entities:group'
 pattern: '[group:field_shortname_or_acronym]'
 selection_criteria:
-  cd286027-f777-4c56-8dda-8eddacd5f1d6:
+  0f50a112-248c-4e94-9f0e-722438519c86:
     id: 'entity_bundle:group'
     bundles:
       bureau_office: bureau_office
       elected_official: elected_official
-      program: program
-      project: project
     negate: false
     context_mapping:
       group: group
-    uuid: cd286027-f777-4c56-8dda-8eddacd5f1d6
+    uuid: 0f50a112-248c-4e94-9f0e-722438519c86
 selection_logic: and
-weight: -10
+weight: -5
 relationships: {  }
