POWR-978 fix project block list

--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -27,6 +27,7 @@ dependencies:
     - entity_browser
     - field_group
     - maxlength
+    - path
 third_party_settings:
   field_group:
     group_site_menu:
@@ -284,6 +285,19 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-hidden:
-  path: true
-  uid: true
+  path:
+    type: path
+    weight: 13
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  uid:
+    type: entity_reference_autocomplete
+    weight: 14
+    region: content
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+hidden: {  }
