--- a/web/sites/default/config/pathauto.pattern.group_projects_and_programs.yml
+++ b/web/sites/default/config/pathauto.pattern.group_projects_and_programs.yml
@@ -8,9 +8,9 @@ dependencies:
 id: group_projects_and_programs
 label: 'Group: projects and programs'
 type: 'canonical_entities:group'
-pattern: '[group:field_parent_group:entity:field_shortname_or_acronym]/[group:field_shortname_or_acronym]'
+pattern: '[group:field_shortname_or_acronym]'
 selection_criteria:
-  dd896ccb-9257-4677-b29f-b4c384a8266b:
+  976cd083-685d-4cf5-8037-6569046f24b4:
     id: 'entity_bundle:group'
     bundles:
       program: program
@@ -18,7 +18,7 @@ selection_criteria:
     negate: false
     context_mapping:
       group: group
-    uuid: dd896ccb-9257-4677-b29f-b4c384a8266b
+    uuid: 976cd083-685d-4cf5-8037-6569046f24b4
 selection_logic: and
 weight: -5
 relationships: {  }
