--- a/web/sites/default/config/views.view.group_projects.yml
+++ b/web/sites/default/config/views.view.group_projects.yml
@@ -72,7 +72,7 @@ display:
           row_class: ''
           default_row_class: true
           type: ul
-          wrapper_class: ''
+          wrapper_class: item-list
           class: ''
       row:
         type: fields
