POWR-946 Add migrations to migration group

--- a/web/modules/custom/portland_migrations/migrations/eudaly_news.yml
+++ b/web/modules/custom/portland_migrations/migrations/eudaly_news.yml
@@ -1,5 +1,6 @@
 id: eudaly_news
 label: 'Commissioner Eudaly News Import'
+migration_group: eudaly_news
 source:
   plugin: csv
   path: modules/custom/portland_migrations/sources/eudaly_news.csv
