--- a/web/modules/custom/portland_migrations/migrations/eudaly_news_group_content.yml
+++ b/web/modules/custom/portland_migrations/migrations/eudaly_news_group_content.yml
@@ -1,5 +1,6 @@
 id: eudaly_news_group_content
 label: "Migrate Commissioner Eudaly's news group content to Group"
+migration_group: eudaly_news
 source:
   plugin: csv
   path: modules/custom/portland_migrations/sources/eudaly_news.csv
