POWR-946 Add default author of superAdmin

--- a/web/modules/custom/portland_migrations/migrations/eudaly_news.yml
+++ b/web/modules/custom/portland_migrations/migrations/eudaly_news.yml
@@ -8,6 +8,9 @@ source:
   keys:
     - CONTENT_ID
 process:
+  uid:
+    plugin: default_value
+    default_value: 1
   title: CONTENT_NAME
   field_body_content/value: TEXT
   field_body_content/format:
