POWR-1002 Use Featured and Teaser correctly

--- a/web/sites/default/config/views.view.group_news.yml
+++ b/web/sites/default/config/views.view.group_news.yml
@@ -521,7 +521,7 @@ display:
         type: 'entity:node'
         options:
           relationship: none
-          view_mode: featured
+          view_mode: teaser
     cache_metadata:
       max-age: -1
       contexts:
